Fix light theme fallback colors and fix monaco minimap bleeding over terminal panel

--- a/remote_runtime/workspace/css/editor.css
+++ b/remote_runtime/workspace/css/editor.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     min-height: 0;
+    overflow: hidden;
 }
 
 #tabs-bar {
@@ -106,6 +107,8 @@
 #monaco-container {
     flex-grow: 1;
     display: none;
+    position: relative;
+    overflow: hidden;
 }
 
 #welcome-screen {
